feat: 식물 api 호출 완료

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:3000/api/v1
-API_KEY=J3WGs2b0-YCnBpE-N-_tEJ0zpjlD0PSH4-nyTTn3HXw
+VITE_API_BASE_URL=https://trefle.io/api/v1
+VITE_API_KEY=J3WGs2b0-YCnBpE-N-_tEJ0zpjlD0PSH4-nyTTn3HXw
